# auth

./: .env  Cargo.toml
config/: dev.yaml  test.yaml
migrations/: 20240226125402_create_user_table.up.sql  20240226172410_add_bio_for_users.down.sql  20240226172410_add_bio_for_users.up.sql  20240227222402_create_account_deletions_table.down.sql  20240227222402_create_account_deletions_table.up.sql
scripts/: start_instances.sh
src/: config.rs  lib.rs  main.rs  server.rs  services.rs  telemetry.rs
src/app_error/: error.rs  error_propagation.rs  mod.rs
src/db/: error.rs  mod.rs  redis.rs
src/logic/: captcha.rs  mod.rs  reset_password.rs
src/logic/email/: confirm_email.rs  mod.rs  url_token.rs
src/logic/user/: authenticate.rs  create.rs  delete.rs  mod.rs  update.rs  validate.rs
src/routes/: cancel_delete_account.rs  home.rs  login.rs  mod.rs  register.rs  reset_password.rs  settings.rs  utils.rs
src/routes/api/v1/: captcha.rs  mod.rs
src/routes/api/v1/user/: create.rs  data.rs  (+6 more)
src/session/: client_cache.rs  mod.rs  session.rs
src/tasks/: error.rs  mod.rs  pg_accounts_deletion.rs  redis_fields_deletion.rs
static/: index.html
static/html/: cancel-delete-account.html  home.html  login.html  register-request.html  register.html  reset-password-request.html  reset-password.html  settings.html
static/html/errors/: 404.html
static/js/: captcha.js  delete_account.js  display.js  login.js  logout.js  register.js  reset_password.js  settings.js  validate.js
tests/api/: main.rs  register_user.rs  utils.rs
tests/tasks/: main.rs  task1.rs  utils.rs
