[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-web-lab = "0.19"
actix-cors = "0.6"
actix-governor = "0.5"
rustls = "0.21"
rustls-pemfile = "1"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["chrono_0_4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
validator = "0.16"
config = { version = "0.13", default-features = false, features = ["yaml"] }
secrecy = { version = "0.8", features = ["serde"] }
argon2 = "0.5"
chrono = "0.4"
uuid = { version  = "1", features = ["v4", "serde"] }
deadpool-redis = "0.12"
rand = "0.8"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-log = "0.1"
captcha = "0.0.9"
base64 = "0.21"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "postgres",
    "uuid",
    "macros",
    "chrono",
    "runtime-tokio-rustls",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1.18"
fake = "2"
